--- a/style.css
+++ b/style.css
@@ -66,3 +66,9 @@ div a{
     font-size: 14px;
     line-height: 21px;
 }
+
+div a:hover{
+    background-color: #c4f82a;
+    color: #141414;
+    transition: 0,7s;
+}
